# ppx_binary

./: .gitignore  LICENSE  README.md  bmp_header.ml  example.ml  main.ml  ppx_binary.opam  sample.ml  sample2.ml  sample3.ml
example/: bmp_header.ml  cs50.ml  cs50_ints.ml  example.ml  jbuild  sample.ml
examples/: jbuild  resize.ml  resize_masking.ml
src/: jbuild  ppx_binary.ml  typeinfo.ml  typeinfo.mli
test/: jbuild  main.ml
