opam-version: "1.3"
name: "ppx_binary"
version: "0.1.0"
maintainer: "Levi Roth <levimroth@gmail.com>"
author: "Levi Roth <levimroth@gmail.com>"
license: "MIT"
homepage: "https://github.com/leviroth/ppx_binary"
bug-reports: "https://github.com/leviroth/ppx_binary/issues"
dev-repo: "git+https://github.com/leviroth/ppx_binary.git"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]

depends: [
  "stdint"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]

available: [ ocaml-version >= "4.03.0" ]
